--- a/_includes/qa-template.html
+++ b/_includes/qa-template.html
@@ -6,7 +6,7 @@
 
 <div class="d-grid mb-3" >
     <a class="btn btn-{{ theme }} text-start mb-2" data-bs-toggle="collapse" data-bs-target="#collapse{{ include.id }}"
-        aria-expanded="false" aria-controls="collapseExample">
+        aria-expanded="false" aria-controls="collapse{{ include.id }}" aria-label="{{ include.question | strip_html }}">
         {{ include.question | markdownify }}
     </a>
     <div class="collapse multi-collapse" id="collapse{{ include.id }}">
